welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:1: error: Missing closing brace `}' assumed here
def dateFashion(you:Int, date:Int):Int = {
^